fix: [CDS-48345]: Ui is getting overlapped with scroll bar in custom artifact (#13001)

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
@@ -39,6 +39,11 @@
     overflow: scroll;
   }
 
+  .customArtifactForm {
+    margin-left: calc(var(--spacing-5) * -1);
+    padding-right: var(--spacing-5);
+  }
+
   .artifactSelect {
     button.bp3-button {
       width: 380px;
